src/Components/styles.css
body {
  overflow-y: scroll;
  overflow-x: hidden;
}

/* Navbar */
  

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-row-vcenter {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-hcenter {
  justify-content: center;
}

.nav-bar {
  width: 100%;
  height:30%;
}

.group-764 {
  height: 100%;
}
.group-765 {
  height: 100%;
  background-color: #110055;
  color: white;
}

.arpeggia-_logo-_transparent-011 {
  width: 20%;
  margin-right: 10px;
  height: 100%;
}
.arpeggia-_logo-_transparent-013 {
  width: auto;
  margin-right: 1%;
  height: 100%;
}

.txt-777 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgb(255, 255, 255);
  text-align: center;
  width: 15%;
  height: auto;
  word-wrap: break-word;
  margin-right: 1%;
}
.txt-778 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color:white;
  text-align: center;
  width: 15%;
  height: auto;
  word-wrap: break-word;
  margin-right: 5%;
}

.txt-476 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgb(255, 255, 255);
  text-align: center;
  word-wrap: break-word;
  margin-right: 3%;
}

.txt-477 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color:white;
  text-align: center;
  word-wrap: break-word;
  margin-right: 3%;
}

.txt-387 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgb(255, 255, 255);
  text-align: center;
  word-wrap: break-word;
}
.txt-388 {
  font-size: 48px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: white;
  text-align: center;
  word-wrap: break-word;
}

.page-content {
  height: 100%;
  display: flex;
  flex-direction: column;
  
  
}

/* Mainbanner */

@import url("https://fonts.googleapis.com/css2?family=League Spartan:wght@700&display=swap");

p {
  margin: 0;
}



.group-941 {
  position: relative;
  padding: 2% 5% 9% 5%; 
  box-sizing: border-box;
  background-color: rgba(171, 228, 255, 1);
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

  border: 0px solid black;
  flex: 1 1 auto;
}


.txt-688 {
  top: 53%;
  position: absolute;
  left: 2.5%;
  font-size: 537.5%;
  font-family: League Spartan, sans-serif;
  font-weight: 700;
  color: hsl(252, 100%, 17%);
  width: 55%;
  height: 50%;
  word-wrap: break-word;
  mix-blend-mode: hard-light;
}

.orchestra-pana-1 {
  position: relative;
  bottom: 25.86%;
  left: 57.25%;
  /* right: 4.1%;
  width: 40%;
  height: auto; */
}
/* Nltext */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Open Sans:wght@700&display=swap");

p {
  margin: 0;
}

.flex-col-hstart-vstart {
  display: flex;
  flex-direction: row;
  justify-content: flex-start;
  align-items: flex-start;
  flex: 1 1 auto;
}

.nl-text {
  position: relative;
}

.flex-hcenter {
  justify-content: center;
}

.group-392 {
  position: absolute;
  padding: 2.5% 2.5% 5% 2.5%;
  display: flex;
  flex-direction: row;
  box-sizing: border-box;
  background-color: rgba(17, 0, 85, 1);
  height: 350px;
  width: 100%;
  
}

.txt-3310 {
  position: absolute;
  font-size: 48px;
  padding-right: 2.5%;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  width: 100%;
  /* word-wrap: break-word; */
}

.txt-737 {
  position: relative;
  top: 46.58%;
  padding-right: 40%;
  bottom: 0%;
  font-size: 24px;
  font-family: Open Sans, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  width: 45%;
  height: 100%;
  word-wrap: break-word;
}
/* Signupnewsletter */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-row-vcenter {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-row {
  display: flex;
  flex-direction: row;
}

.flex-hcenter {
  justify-content: center;
}

.flex-row-vend {
  display: flex;
  flex-direction: row;
  align-items: flex-end;
}

.sign-up-newsletter {
  position: relative;
  padding: 33px 130px 36px 841px;
  box-sizing: border-box;
  width: 1507px;
  height: 292px;
}

.group-1108 {
  position: relative;
  height: 100%;
}

.group-262 {
  position: absolute;
  top: 94px;
  right: 400px;
  none: 0px;
  width: 183px;
  height: -moz-fit-content;
  height: fit-content;
}

.check-1 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 35px;
}

.txt-912 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  width: 128px;
  height: 24px;
  word-wrap: break-word;
}

.group-441 {
  position: absolute;
  top: 47px;
  right: 415px;
  none: 0px;
  width: 167px;
  height: fit-content;
}

.check-2 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 34px;
}

.txt-914 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: center;
  width: 113px;
  height: 24px;
  word-wrap: break-word;
}

.group-4411 {
  position: absolute;
  top: 135px;
  right: 415px;
  none: 0px;
  width: 167px;
  height: 27px;
}

.check-2 {
  background-color: rgba(255, 255, 255, 1);
  border: 4px solid rgba(0, 0, 0, 1);
  box-sizing: border-box;
  width: 19.93px;
  height: 20px;
  margin-right: 34px;
}

.txt-914 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(255, 255, 255, 1);
  text-align: left;
  width: 113px;
  height: 24px;
  word-wrap: break-word;
}

.options {
  position: relative;
  padding-right: 100%;
  display: flex;
}
#iAmA {
  left: 60%;
  position: absolute;
  width: 15%;
  padding-top: 2.5%;
}

.choices {
  left: 92%;
  position: absolute;
  width: 15%;
  padding-top: 0%;
}

/* Emailbar */

@import url("https://fonts.googleapis.com/css2?family=Inter:wght@700&display=swap");

p {
  margin: 0;
}

.flex-hcenter {
  justify-content: center;
}

.email-bar {
  padding: 20px 0px 0px 0px;
  box-sizing: border-box;
  border-top: 1px solid rgb(255, 255, 255);
 
  bottom: -280px;
  right: 12%;
  position: absolute;
}

.group-371 {
  padding: 7px 326px 2px 10px;
  box-sizing: border-box;
  background-color: rgba(255, 255, 255, 1);
  border: 3px solid rgba(17, 0, 85, 1);
  width: 100%;
  height: 100%;
}

.txt-2108 {
  font-size: 28px;
  font-family: Inter, sans-serif;
  font-weight: 700;
  color: rgba(17, 0, 85, 1);
  text-align: center;
  width: 192px;
  word-wrap: break-word;
}

/* Our Team Page */

.bg-1 {
  display: flex;
  position: relative;
  flex-direction: column;
  background-color: #ABE4FF;
  height: 1952px;
  padding: 10px 80px;
}

.header-1 {
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-size: 96px;
  line-height: 116px;
  text-align: left;
  position: relative;
  margin-bottom: 30px;
}

.info-box {
  display: flex;
  width: auto;
  height: 25%;
  justify-content: center;
  align-items: center;
  gap: 50px;
  background-color: white;
  border: 8px solid black;
  margin-bottom: 40px;
  padding: 20px;
}

.team-photo {
  width: 286.6px;
  height: 300.24px;
  /* border: 8px solid black; */
}

.quick-facts {
  font-family: 'Open Sans';
  font-style: normal;
  font-size: 25px;
  line-height: 33px;
  width: 348px;
  height: 195px;
  text-align: left;
  box-sizing: border-box;
  /* border: 8px solid black; */
}

.bio {
  font-family: 'Open Sans';
  font-style: normal;
  font-size: 25px;
  font-weight: 400;
  line-height: 25px;
  box-sizing: border-box;
  width: 560px;
  height: 195px;
  /* border: 8px solid black; */
}

/* Get Involved Page */

.involvedHeader  {
  position: absolute;
width: 616px;
height: 83px;
left: 64px;
top: 199px;

font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 96px;
line-height: 116px;
text-align: center;

color: #110055;

}

.parent-header {
position: absolute;
left: 12.78%;
right: 15.78%;
top: 85.55%;
bottom: 83.69%;

font-family: 'Inter';
font-style: normal;
font-weight: 700;
font-size: 48px;
line-height: 58px;
color: #000000;

}

.parent-box {
  box-sizing: border-box;
  position: absolute;
  left: 10%;
  right: 0%;
  top: 80%;
  bottom: 0%;
  width: 482px;
  height: 662px;
  background: linear-gradient(0deg, #ABE4FF, #ABE4FF), linear-gradient(0deg, #4EC6FF, #4EC6FF), #4EC6FF;
  border: 6px solid #000000;
}


.student-header {
  position: absolute;
  left: 41.58%;
  right: 15.78%;
  top: 85.55%;
  bottom: 83.69%;
  
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-size: 48px;
  line-height: 58px;
  color: #000000;
  
  }
  
.student-box {
  box-sizing: border-box;
  position: absolute;
  left: 40%;
  right: 0%;
  top: 80%;
  bottom: 0%;
  width: 482px;
  height: 662px;
  background: linear-gradient(0deg, rgba(255, 175, 149, 0.58), rgba(255, 175, 149, 0.58)), linear-gradient(0deg, #CEC6EE, #CEC6EE), #4EC6FF;
  border: 6px solid #000000;
}

  
.teacher-header {
  position: absolute;
  left: 72.58%;
  right: 0.78%;
  top: 85%;
  bottom: 83.69%;
  
  font-family: 'Inter';
  font-style: normal;
  font-weight: 700;
  font-size: 48px;
  line-height: 58px;
  color: #000000;
  
  }
  
  .teacher-box {
    box-sizing: border-box;
  position: absolute;
  left: 70%;
  right: 0%;
  top: 80%;
  bottom: 0%;
  width: 482px;
  height: 662px;
  background: linear-gradient(0deg, #CEC6EE, #CEC6EE), linear-gradient(0deg, #4EC6FF, #4EC6FF), #4EC6FF;
  border: 6px solid #000000;
}

